# oop24-unittest-exercise

./: CMakeLists.txt  README.md
src/: main.cpp  sphere.cpp  sphere.h
test/: test.cpp
